<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SortingChar" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bjb-Hz-o6r">
                                <rect key="frame" x="20" y="28" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Input"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="50K-Ec-Rt5"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ysp-vc-cXy">
                                <rect key="frame" x="275" y="66" width="50" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Sorting"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="doy-hc-QdC"/>
                                </constraints>
                                <state key="normal" title="Sorting"/>
                                <connections>
                                    <action selector="sorting" destination="BYZ-38-t0r" eventType="touchUpInside" id="FEh-cw-ldy"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7L-iV-q3k">
                                <rect key="frame" x="300" y="104" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="SortedChar"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="ysp-vc-cXy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2iW-oe-9eW"/>
                            <constraint firstItem="Z7L-iV-q3k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hka-p5-RD8"/>
                            <constraint firstItem="Bjb-Hz-o6r" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Mtk-HD-fDH"/>
                            <constraint firstItem="Bjb-Hz-o6r" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Paw-1m-Qo4"/>
                            <constraint firstItem="Z7L-iV-q3k" firstAttribute="top" secondItem="ysp-vc-cXy" secondAttribute="bottom" constant="8" id="W4A-Ok-hQd"/>
                            <constraint firstItem="ysp-vc-cXy" firstAttribute="top" secondItem="Bjb-Hz-o6r" secondAttribute="bottom" constant="8" id="eXj-KU-YLd"/>
                            <constraint firstItem="Bjb-Hz-o6r" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="oxi-mX-pl5"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="inputTextField" destination="Bjb-Hz-o6r" id="len-bm-sFX"/>
                        <outlet property="sortedCharLabel" destination="Z7L-iV-q3k" id="slE-4X-deA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="378" y="305"/>
        </scene>
    </scenes>
</document>
